# website

./: .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml  gunicorn_conf.py  pyproject.toml  tox.ini
.github/workflows/: deploy.yaml
content/: code-of-conduct.md  contact.md  donate.md  ecosystem.md  funding.md  index.md  releases.md  security.md  versions.md
content/blog/: blinker-1-6-released.md  click-7-0-released.md  click-7-1-released.md  community-survey-2019.md  donate.md  end-python2-prereleases.md  ending-python2-support.md  flask-0-11-released.md  flask-0-12-3-released.md  flask-0-12-released.md  flask-1-0-released.md  flask-1-1-released.md  flask-2-0-released.md  flask-sqlalchemy-2-4-0-released.md  flask-werkzeug-0-12-2-security-release.md  hello.md  itsdangerous-1-0-0-released.md  itsdangerous-1-1-0-released.md  jinja-2-10-1-released.md  jinja-2-11-0-released.md  jinja-2-8-1-released.md  jinja-2-9-released.md  markupsafe-1-1-0-released.md  markupsafe-1-1-1-released.md  pallets-community-org.md  quart-pallets.md  werkzeug-0-11-6-security-release.md  werkzeug-0-12-released.md  werkzeug-0-13-released.md  werkzeug-0-14-released.md  werkzeug-0-15-0-released.md  werkzeug-0-15-1-released.md  werkzeug-0-15-2-released.md  werkzeug-0-15-3-released.md  werkzeug-0-15-5-released.md  werkzeug-0-16-0-released.md  werkzeug-1-0-0-released.md
content/blog/pycon-2018-click/: index.md
content/contributing/: docs.md  environment.md  features.md  index.md  issues.md  layout.md  pr.md  questions.md  quick.md  release.md  setup.md  tests.md  triage.md
content/people/: ThiefMaster.toml  _tags.toml  davidism.toml  greyli.toml  index.md  jab.toml  mitsuhiko.toml  pgjones.toml  untitaker.toml
content/projects/: click.md  flask.md  itsdangerous.md  jinja.md  markupsafe.md  quart.md  werkzeug.md
requirements/: base.txt  dev.in  dev.txt  typing.in  typing.txt
src/pallets/: __init__.py  load.py  markdown.py  models.py  views.py
src/pallets/static/: pygments-github-dark.css  robots.txt  style.css
src/pallets/templates/: index.html  layout.html  page.html  person.html  project.html
src/pallets/templates/blog/: index.html  post.html
